tests/baselines/reference/exportEqualsClassRedeclarationError.errors.txt
tests/cases/compiler/exportEqualsClassRedeclarationError.ts(2,16): error TS2300: Duplicate identifier 'someProp'.
tests/cases/compiler/exportEqualsClassRedeclarationError.ts(6,16): error TS2300: Duplicate identifier 'someProp'.
tests/cases/compiler/exportEqualsClassRedeclarationError.ts(7,16): error TS2300: Duplicate identifier 'someProp'.


==== tests/cases/compiler/exportEqualsClassRedeclarationError.ts (3 errors) ====
    class SomeClass {
        static get someProp(): number {
                   ~~~~~~~~
!!! error TS2300: Duplicate identifier 'someProp'.
            return 0;
        }
    
        static set someProp(value: number) {}
                   ~~~~~~~~
!!! error TS2300: Duplicate identifier 'someProp'.
        static set someProp(value: number) {}
                   ~~~~~~~~
!!! error TS2300: Duplicate identifier 'someProp'.
    }
    export = SomeClass;